Fixed z-indexes

--- a/src/assets/Common/dashboard/scss/dashboard.scss
+++ b/src/assets/Common/dashboard/scss/dashboard.scss
@@ -15,7 +15,7 @@
     border-top: 1px solid darken($color-white, 15%);
     bottom: -35px;
     right: -35px;
-    z-index: 900;
+    z-index: 4970;
     transform: rotate(-45deg);
     cursor: pointer;
     -webkit-transition: all 300ms ease;
