--- a/src/assets/Common/modal/scss/modal.scss
+++ b/src/assets/Common/modal/scss/modal.scss
@@ -27,7 +27,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 4980;
 }
 
 .wakers_modal
@@ -49,7 +49,7 @@
     -ms-transition: all 500ms ease;
     -o-transition: all 500ms ease;
     transition: all 500ms ease;
-    z-index: 1000;
+    z-index: 4990;
     color: lighten($color-gray, 20%);
 
     a
