--- a/src/assets/Frontend/tooltip/scss/tooltip.scss
+++ b/src/assets/Frontend/tooltip/scss/tooltip.scss
@@ -25,7 +25,7 @@
 
     &:before
     {
-        z-index: 1000;
+        z-index: 5010;
         position: absolute;
         bottom: 150%;
         left: 50%;
